# dgxc-benchmarking

./: .gitignore  CHANGELOG  CLAUDE.md  README.md  install.sh
alternative_recipes/helm-charts/inference/llm-benchmarks/: README.md
cli/llmb-install/: CHANGELOG.md  example_config.yaml  pyproject.toml
cli/llmb-install/docs/: headless-installation.md  recipe_guide.md
cli/llmb-install/src/llmb_install/: constants.py
cli/llmb-install/src/llmb_install/cluster/: gpu.py
cli/llmb-install/src/llmb_install/config/: headless.py  models.py
cli/llmb-install/src/llmb_install/core/: installer.py
cli/llmb-install/src/llmb_install/downloads/: huggingface.py
cli/llmb-run/: CHANGELOG.md  README.md  pyproject.toml
cli/llmb-run/src/llmb_run/: constants.py  job_launcher.py  main.py  task_generation.py
deepseek_v3/pretrain/megatron_bridge/: launch.sh  metadata.yaml
deepseek_v3/pretrain/torchtitan/: README.md  launch.sh  metadata.yaml
llama3.1/: README.md  launch.sh  metadata.yaml
nemotron-h/: metadata.yaml
nemotron4-15b/: metadata.yaml
nemotron4-340b/: metadata.yaml
qwen3/pretrain/: launch.sh  metadata.yaml
